--- a/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
+++ b/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3tm-Yp-lmi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3tm-Yp-lmi">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -37,7 +37,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OrE-h0-RA3" id="17u-hc-Dk2">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="533" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -181,12 +181,15 @@
             <objects>
                 <tableViewController id="4X0-Dd-sxf" customClass="PlanningViewController" customModule="AutisteWatch" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="1" sectionFooterHeight="28" id="Kin-D9-LNr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Activity" id="SRY-lm-B1J">
+                                <rect key="frame" x="0.0" y="65" width="600" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SRY-lm-B1J" id="zkK-ga-aMg">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSo-kb-0A1">
@@ -245,14 +248,14 @@
                                             <exclude reference="tE5-gF-JYo"/>
                                         </mask>
                                         <mask key="constraints">
+                                            <exclude reference="IyL-Eo-n8V"/>
+                                            <exclude reference="LDT-1R-111"/>
                                             <exclude reference="2iB-cc-DwU"/>
                                             <exclude reference="Cjr-k0-cXa"/>
                                             <exclude reference="Z3h-oJ-mYO"/>
                                             <exclude reference="bQo-wl-pjl"/>
                                             <exclude reference="nGZ-3i-KYX"/>
                                             <exclude reference="orv-C5-QpZ"/>
-                                            <exclude reference="LDT-1R-111"/>
-                                            <exclude reference="IyL-Eo-n8V"/>
                                         </mask>
                                     </variation>
                                     <variation key="heightClass=regular-widthClass=compact">
@@ -262,14 +265,14 @@
                                             <include reference="tE5-gF-JYo"/>
                                         </mask>
                                         <mask key="constraints">
+                                            <include reference="IyL-Eo-n8V"/>
+                                            <include reference="LDT-1R-111"/>
                                             <include reference="2iB-cc-DwU"/>
                                             <include reference="Cjr-k0-cXa"/>
                                             <include reference="Z3h-oJ-mYO"/>
                                             <include reference="bQo-wl-pjl"/>
                                             <include reference="nGZ-3i-KYX"/>
                                             <include reference="orv-C5-QpZ"/>
-                                            <include reference="LDT-1R-111"/>
-                                            <include reference="IyL-Eo-n8V"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
@@ -296,6 +299,7 @@
             <objects>
                 <collectionViewController id="k9F-Cu-mUy" customClass="ImgSelectionViewController" customModule="AutisteWatch" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nHV-wC-4Tf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ERd-lb-L4h">
                             <size key="itemSize" width="50" height="50"/>
@@ -305,7 +309,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="oneActivity" id="y97-YD-7uS">
-                                <rect key="frame" x="0.0" y="64" width="89" height="88"/>
+                                <rect key="frame" x="0.0" y="64" width="183" height="177"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="183" height="177"/>
@@ -333,9 +337,9 @@
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="N8b-Y2-vwt"/>
-                                        <exclude reference="ptF-qO-cVb"/>
                                         <exclude reference="dnf-3x-Se2"/>
                                         <exclude reference="ecL-ng-yaq"/>
+                                        <exclude reference="ptF-qO-cVb"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -344,9 +348,9 @@
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="N8b-Y2-vwt"/>
-                                        <include reference="ptF-qO-cVb"/>
                                         <include reference="dnf-3x-Se2"/>
                                         <include reference="ecL-ng-yaq"/>
+                                        <include reference="ptF-qO-cVb"/>
                                     </mask>
                                 </variation>
                             </collectionViewCell>
@@ -572,7 +576,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="oneActivity" id="jIC-Ge-ryR">
-                                <rect key="frame" x="0.0" y="64" width="89" height="88"/>
+                                <rect key="frame" x="0.0" y="64" width="183" height="177"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="183" height="177"/>
