--- a/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
+++ b/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3tm-Yp-lmi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3tm-Yp-lmi">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -47,7 +47,36 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="6ht-yw-7WI" firstAttribute="leading" secondItem="17u-hc-Dk2" secondAttribute="leadingMargin" constant="8" id="ugC-hX-ZzM"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="ugC-hX-ZzM"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="heightClass=regular-widthClass=compact">
+                                        <mask key="constraints">
+                                            <include reference="ugC-hX-ZzM"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstItem="6ht-yw-7WI" firstAttribute="centerY" secondItem="OrE-h0-RA3" secondAttribute="centerY" id="5N3-Ix-aFt"/>
+                                    <constraint firstAttribute="trailing" secondItem="6ht-yw-7WI" secondAttribute="trailing" constant="67" id="rGI-fV-5Pk"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="5N3-Ix-aFt"/>
+                                        <exclude reference="rGI-fV-5Pk"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="5N3-Ix-aFt"/>
+                                        <include reference="rGI-fV-5Pk"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <segue destination="zXW-dj-kYP" kind="show" identifier="toPlanPatient" id="I9W-Z1-rvl"/>
                                     <segue destination="5bM-YQ-fDT" kind="show" identifier="toEditPatient" trigger="accessoryAction" id="5lv-Sw-2Wt"/>
@@ -68,7 +97,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hmW-GJ-Le8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1027" y="738"/>
+            <point key="canvasLocation" x="589.5" y="801"/>
         </scene>
         <!--Plan Or Notify View Controller-->
         <scene sceneID="Vbk-th-Sh8">
@@ -505,10 +534,13 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="txtFld_elementsName" destination="TAj-5P-eAh" id="aT2-Hd-Wgn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o1B-td-FEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1802" y="1029"/>
+            <point key="canvasLocation" x="1794" y="907.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -544,10 +576,10 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="50s-Fy-JIv" id="Vt6-ug-DRI">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="533" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xe-Oi-UKu">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xe-Oi-UKu">
                                             <rect key="frame" x="14" y="11" width="272" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -589,6 +621,7 @@
                                 </variation>
                                 <connections>
                                     <segue destination="zXW-dj-kYP" kind="show" identifier="toPlanGroup" id="Kk0-z3-Akq"/>
+                                    <segue destination="5bM-YQ-fDT" kind="show" identifier="toEditGroup" trigger="accessoryAction" id="Nhh-1Q-x7Q"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -628,7 +661,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="183" height="177"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wn-0e-xrV">
+                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wn-0e-xrV">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         </imageView>
                                     </subviews>
@@ -835,9 +868,9 @@
         <image name="Patient" width="17" height="17"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="GKy-Bb-NTL"/>
-        <segue reference="5lv-Sw-2Wt"/>
-        <segue reference="I9W-Z1-rvl"/>
         <segue reference="nFd-F5-0aa"/>
+        <segue reference="I9W-Z1-rvl"/>
+        <segue reference="GKy-Bb-NTL"/>
+        <segue reference="Tmq-co-uJY"/>
     </inferredMetricsTieBreakers>
 </document>
